# python-data-science

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  noxfile.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
data/: README.md
notebooks/: 01_exploration.ipynb  README.md
scripts/: execute_notebooks.py
src/ds/: __init__.py  data.py  paths.py  plots.py
tests/: test_paths.py
